Ensure honeycomb cuts off horizontally and doesn't cause a horizontal scroll effect

--- a/src/components/Layout/layout.module.css
+++ b/src/components/Layout/layout.module.css
@@ -1,5 +1,7 @@
 .flow {
   width: 100vw;
+  position: relative;
+  overflow-x: hidden;
 }
 
 .content {
